--- a/frontend/car_rental_frontend/src/app/auth/components/signup/signup.component.html
+++ b/frontend/car_rental_frontend/src/app/auth/components/signup/signup.component.html
@@ -1,5 +1,7 @@
 <section>
+  
   <form class="form-class" [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+    <h2>SignUp</h2>
     <mat-form-field appearance="outline">
       <input matInput 
       type="text" 
@@ -31,5 +33,6 @@
       <mat-error *ngIf="signupForm.hasError('passwordMismatch', 'confirmPassword')">Passwords do not match</mat-error>
     </mat-form-field>
     <button type="submit" mat-raised-button color="primary" [disabled]="!signupForm.valid">Submit</button>
+    <a routerLink="/login">or log in</a>
   </form>
 </section>
