--- a/frontend/car_rental_frontend/src/app/app.component.html
+++ b/frontend/car_rental_frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div>
+<div *ngIf="!isAdminLoggedIn && !isCustomerLoggedIn">
   <mat-toolbar class="custom-navbar">
     <div class="navbar-title">
       <a routerLink="/login">Car Rental Service</a>
@@ -6,6 +6,30 @@
     <div style="margin-right: 3%;">
       <a routerLink="/register" routerLinkActive="active" style="margin-right: 15%; color: white;">Sign Up</a>
       <a routerLink="/login" routerLinkActive="active" style="color: white;">login</a>
+    </div>
+  </mat-toolbar>
+</div>
+
+<div *ngIf="isCustomerLoggedIn">
+  <mat-toolbar class="custom-navbar">
+    <div class="navbar-title">
+      <a routerLink="/login">LoggedIn Customer</a>
+    </div>
+    <div style="margin-right: 3%;">
+      <a routerLink="/Customer/dashboard" routerLinkActive="active" style="margin-right: 15%; color: white;">Dashboard Customer</a>
+      <a routerLink="/login" routerLinkActive="active" (click)="logout()" style="color: white;">logput</a>
+    </div>
+  </mat-toolbar>
+</div>
+
+<div *ngIf="isAdminLoggedIn">
+  <mat-toolbar class="custom-navbar">
+    <div class="navbar-title">
+      <a routerLink="/login">LoggedIn Admin</a>
+    </div>
+    <div style="margin-right: 3%;">
+      <a routerLink="/admin/dashboard" routerLinkActive="active" style="margin-right: 15%; color: white;">Dashboard Admin</a>
+      <a routerLink="/login" routerLinkActive="active" (click)="logout()" style="color: white;">logout</a>
     </div>
   </mat-toolbar>
 </div>
