create reactive form for posting a car

--- a/frontend/car_rental_frontend/src/app/app.component.html
+++ b/frontend/car_rental_frontend/src/app/app.component.html
@@ -27,8 +27,9 @@
     <div class="navbar-title">
       <a routerLink="/login">LoggedIn Admin</a>
     </div>
-    <div style="margin-right: 3%;">
+    <div style="margin-right: 10%;">
       <a routerLink="/admin/dashboard" routerLinkActive="active" style="margin-right: 15%; color: white;">Dashboard Admin</a>
+      <a routerLink="/admin/car" routerLinkActive="active" style="margin-right: 15%; color: white;">Post car</a>
       <a routerLink="/login" routerLinkActive="active" (click)="logout()" style="color: white;">logout</a>
     </div>
   </mat-toolbar>
