--- a/frontend/car_rental_frontend/src/app/modules/customer/components/customer-dashboard/customer-dashboard.component.html
+++ b/frontend/car_rental_frontend/src/app/modules/customer/components/customer-dashboard/customer-dashboard.component.html
@@ -1,1 +1,14 @@
-<p>customer-dashboard works!</p>
+<mat-card class="card-class" *ngFor="let car of cars">
+    <mat-card-header>
+      <mat-card-title-group >
+        <img mat-card-md-image src={{car.image}} >
+        <mat-card-title>{{ car.brand }}</mat-card-title>
+        <mat-card-subtitle>{{ car.type }}</mat-card-subtitle>
+      </mat-card-title-group>
+    </mat-card-header>
+    <mat-card-content>
+        {{ car.description }}
+    </mat-card-content>
+    
+    
+  </mat-card>
